[metadata]
name = auto_compiler
version = 0.0.6
description = A package for auto compiling C++ files as soon as they are saved
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/garvit-joshi/auto-loader
author = Garvit Joshi
author_email = garvitjoshi9@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Education
    Programming Language :: C++
    Topic :: Utilities
keywords = C++ compiling g++

[options]
package_dir =
    = auto_compiler
packages = find:
python_requires = >=3.6

[options.packages.find]
where = auto_compiler

[options.entry_points]
console_scripts =
    auto-loader = auto_compiler:run_loader